@@ -5,6 +5,7 @@ Distributed under the GPL v3 or later
 <unreleased>
 
 - --startposition for not working on live streams
+- "--startposition 0" now starts live streams from the beginning
 
 Version 20231120
 
